--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">RVT-2: Learning Precise Manipulation from Few Examples</h1>>
+          <h1 class="title is-1 publication-title">RVT-2: Learning Precise Manipulation from Few Examples</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
 	      <a href="https://imankgoyal.github.io/">Ankit Goyal</a>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -147,19 +147,45 @@
   </div>
 </section>
 
-<section class="section">
+<section class="hero teaser">
   <div class="container is-max-desktop">
-    <!-- Paper video. -->
-    <div class="columns is-centered has-text-centered">
+    <div class="columns is-centered">
       <div class="column">
-        <h2 class="title is-3">Real-World Experiment</h2>
-	<video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
-            <source src="./real_world/teaser.mp4" type="video/mp4" class="figure-img img-fluid rounded">
-        </video>
+        <div class="content has-text-centered" style="background-color:#93FFE8; border-radius: 10px 10px 10px 10px;">
+	  <br>
+          <figure>
+            <a href="./figs/teaser.gif"><img src="./figs/teaser.gif" width="360px"></a>
+          </figure>
+	  <p> A single RVT-2 model can perform multiple 3D manipulation tasks, including ones requiring millimeter-level precision.</p>
+        </div>
       </div>
+      <div class="column">
+        <div class="content has-text-centered" style="background-color:#93FFE8; border-radius: 10px 10px 10px 10px;">
+	  <br>
+        <figure>
+          <a href="./figs/plot.pdf">
+            <img id="plot" src="./figs/plot.pdf" width="500px"
+              onmouseover="document.getElementById('plot').src='./figs/plot.pdf'"/>
+          </a>
+        </figure>
+      <p> RVT-2 trains significantly faster and achieves higher performance than prior state-of-the-art RVT and PerAct. </p>
+        </div>
+      </div>
+<!--     <div class="hero-body"> -->
+<!--       <center> -->
+<!--       <figure style="width:400px"><br> -->
+<!--         <a href="./figs/plot.gif"><img src="./figs/plot.gif" width="400px"></a> -->
+<!--         <a href="./real_world/videos_crf_30/real_world.gif"><img src="./real_world/videos_crf_30/real_world.gif" width="400px"></a> -->
+<!--       </figure> -->
+<!--       </center> -->
+<!--       <h2 class="subtitle has-text-centered"> -->
+<!--         <span class="dnerf">RVT</span> is a 3D manipulation system that outperforms existing solutions while being an order of magnitude more scalable. It solves 3D manipulation tasks with just a few (~10) demonstrations per task. -->
+<!--       </h2> -->
+<!--     </div> -->
     </div>
-   </div>
+  </div>
 </section>
+
 
 <section class="section">
   <div class="container is-max-desktop">
@@ -170,7 +196,7 @@
         <h2 class="title is-3">Summary</h2>
 	<p>
 	    <figure>
-	    <a href="./figs/method.png"><img src="./figs/method.png"></a>
+	    <a href="./figs/method.pdf"><img src="./figs/method.pdf"></a>
 	    </figure>
         </p>
         <div class="content has-text-justified">
