--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
         <div class="content has-text-centered" style="background-color:#93FFE8; border-radius: 10px 10px 10px 10px;">
 	  <br>
         <figure>
-          <a href="./figs/plot.pdf">
-            <img id="plot" src="./figs/plot.pdf" width="500px"
-              onmouseover="document.getElementById('plot').src='./figs/plot.pdf'"/>
+          <a href="./figs/plot.png">
+            <img id="plot" src="./figs/plot.png" width="500px"
+              onmouseover="document.getElementById('plot').src='./figs/plot.png'"/>
           </a>
         </figure>
       <p> RVT-2 trains significantly faster and achieves higher performance than prior state-of-the-art RVT and PerAct. </p>
@@ -196,7 +196,7 @@
         <h2 class="title is-3">Summary</h2>
 	<p>
 	    <figure>
-	    <a href="./figs/method.pdf"><img src="./figs/method.pdf"></a>
+	    <a href="./figs/method.png"><img src="./figs/method.png"></a>
 	    </figure>
         </p>
         <div class="content has-text-justified">
