--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="content has-text-centered" style="background-color:#93FFE8; border-radius: 10px 10px 10px 10px;">
 	  <br>
           <figure>
-            <a href="./figs/teaser.gif"><img src="./figs/teaser.gif" width="360px"></a>
+            <a href="./figs/teaser.gif"><img src="./figs/teaser.gif" width="400px"></a>
           </figure>
 	  <p> A single RVT-2 model can perform multiple 3D manipulation tasks, including ones requiring millimeter-level precision.</p>
         </div>
@@ -168,7 +168,7 @@
               onmouseover="document.getElementById('plot').src='./figs/plot.png'"/>
           </a>
         </figure>
-      <p> RVT-2 trains significantly faster and achieves higher performance than prior state-of-the-art RVT and PerAct. </p>
+      <p> RVT-2 trains significantly faster and achieves higher performance than prior state-of-the-art RVT and PerAct. RVT-2 significantly outperforms both while requiring much less compute to train. Because of the efficiency gains, with the same compute, RVT-2 trains 6X faster than RVT, while improving performance by 15% in absolute or 23% in relative terms. While comparing with PerAct, RVT-2 improves the relative performance by 57%. </p>
         </div>
       </div>
 <!--     <div class="hero-body"> -->
