--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               onmouseover="document.getElementById('plot').src='./figs/plot.png'"/>
           </a>
         </figure>
-      <p> RVT-2 trains significantly faster and achieves higher performance than prior state-of-the-art RVT and PerAct. RVT-2 significantly outperforms both while requiring much less compute to train. Because of the efficiency gains, with the same compute, RVT-2 trains 6X faster than RVT, while improving performance by 15% in absolute or 23% in relative terms. While comparing with PerAct, RVT-2 improves the relative performance by 57%. </p>
+      <p> RVT-2 trains significantly faster and achieves higher performance than prior state-of-the-art RVT and PerAct. It outperforms both while requiring much less compute to train. Because of the efficiency gains, with the same compute, RVT-2 trains 6X faster than RVT, while improving performance by 23% in relative terms. Compared with PerAct, RVT-2 improves the relative performance by 57%. </p>
         </div>
       </div>
 <!--     <div class="hero-body"> -->
