real world experiment video

--- a/index.html
+++ b/index.html
@@ -214,6 +214,329 @@
   </div>
 </section>
 
+<section class="section">
+
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <h2 class="title is-3">Experiment Results</h2>
+    </div>
+    <p>We trained a single RVT model from real world data. The single trained RVT model is used to evaluate the performance on all tasks.</p>
+    <br>
+    <h2 class="title is-4">Real World Videos</h2>
+    <h2 class="title is-5">Put Object in Drawer</h2>
+    <div class="columns is-centered">
+      <div class="column">
+        <div class="content">
+          <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+            <source src="real_world/drawer_success_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+          </video>
+          <p>
+          <font color="#76B900"><b>Success</b></font>: Put green marker in drawer
+          </p>
+        </div>
+      </div>
+      <div class="column">
+        <div class="content">
+          <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+            <source src="real_world/drawer_success_2.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+          </video>
+          <p>
+    <font color="#76B900"><b>Success</b></font>: Put green marker in drawer
+          </p>
+        </div>
+      </div>
+      <div class="column">
+        <div class="content">
+          <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+            <source src="real_world/drawer_success_3.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+          </video>
+          <p>
+    <font color="#76B900"><b>Success</b></font>: Put green marker in drawer
+          </p>
+        </div>
+      </div>
+      <div class="column">
+        <div class="content">
+          <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+            <source src="real_world/drawer_failure_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+          </video>
+          <p>
+          <font color="#FF4500"><b>Failure</b></font>: Put blue marker in drawer
+          </p>
+        </div>
+      </div>
+    </div>
+
+<h2 class="title is-5">Put Object in Shelf</h2>
+<div class="columns is-centered">
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/put_green_block_in_bottom_shelf_success_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+    <font color="#76B900"><b>Success</b></font>: Put green block in bottom shelf
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/put_green_block_in_bottom_shelf_success_2.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+    <font color="#76B900"><b>Success</b></font>: Put green block in bottom shelf
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/put_green_block_in_top_shelf_success_3.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+    <font color="#76B900"><b>Success</b></font>: Put green block in top shelf
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/put_green_block_in_top_shelf_success_4.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+        <font color="#FF4500"><b>Success</b></font>: Put green block in top shelf
+      </p>
+    </div>
+  </div>
+</div>
+
+<h2 class="title is-5">Put Marker in Bowl/Mug</h2>
+<div class="columns is-centered">
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/put_green_marker_in_bowl_success_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+        <font color="#FF4500"><b>Success</b></font>: Put green marker in bowl
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/put_blue_marker_in_bowl_success_2.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+        <font color="#FF4500"><b>Success</b></font>: Put blue marker in bowl
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/put_green_marker_in_mug_success_3.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+      <font color="#FF4500"><b>Success</b></font>: Put green marker in mug
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/put_blue_marker_in_bowl_failure_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+      <font color="#FF4500"><b>Failure</b></font>: Put blue marker in bowl
+      </p>
+    </div>
+  </div>
+</div>
+
+
+<h2 class="title is-5">Press sanitizer</h2>
+<div class="columns is-centered">
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/press_sanitizer_success_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+        <font color="#FF4500"><b>Success</b></font>: Press sanitizer
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/press_sanitizer_success_2.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+        <font color="#FF4500"><b>Success</b></font>: Press sanitizer
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/press_sanitizer_success_3.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+      <font color="#FF4500"><b>Success</b></font>: Press sanitizer
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/press_sanitizer_failure_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+      <font color="#FF4500"><b>Failure</b></font>: Press sanitizer
+      </p>
+    </div>
+  </div>
+</div>
+
+<h2 class="title is-5">Stack blocks</h2>
+<div class="columns is-centered">
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/put_blue_on_red_success_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+        <font color="#FF4500"><b>Success</b></font>: Put blue block on red block
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/put_green_on_blue_success_2.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+        <font color="#FF4500"><b>Success</b></font>: Put green block on blue block
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/put_red_on_green_success_3.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+      <font color="#FF4500"><b>Success</b></font>: Put red block on green block
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/put_red_on_green_failure_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+      <font color="#FF4500"><b>Failure</b></font>: Put red block in green block
+      </p>
+    </div>
+  </div>
+</div>
+
+<h2 class="title is-5">Insert peg</h2>
+<div class="columns is-centered">
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/peg_success_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+        <font color="#FF4500"><b>Success</b></font>: Insert peg
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/peg_success_2.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+        <font color="#FF4500"><b>Success</b></font>: Insert peg
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/peg_success_3.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+      <font color="#FF4500"><b>Success</b></font>: Insert peg
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/peg_failure_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+      <font color="#FF4500"><b>Failure</b></font>: Insert peg
+      </p>
+    </div>
+  </div>
+</div>
+
+
+<h2 class="title is-5">Insert plug</h2>
+<div class="columns is-centered">
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/plug_success_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+        <font color="#FF4500"><b>Success</b></font>: Insert plug
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/plug_success_2.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+        <font color="#FF4500"><b>Success</b></font>: Insert plug
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/plug_success_3.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+      <font color="#FF4500"><b>Success</b></font>: Insert plug
+      </p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+      <video id="dollyzoom" autoplay="" controls="" muted="" loop="" playsinline="" height="100%" onloadstart="this.playbackRate=2">
+        <source src="real_world/plug_failure_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
+      </video>
+      <p>
+      <font color="#FF4500"><b>Failure</b></font>: Insert plug
+      </p>
+    </div>
+  </div>
+</div>
+
+  </div>
+</section>
+
+
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
