--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <source src="real_world/put_green_block_in_top_shelf_success_4.mp4" type="video/mp4" class="figure-img img-fluid rounded">
       </video>
       <p>
-        <font color="#FF4500"><b>Success</b></font>: Put green block in top shelf
+        <font color="#76B900"><b>Success</b></font>: Put green block in top shelf
       </p>
     </div>
   </div>
@@ -319,7 +319,7 @@
         <source src="real_world/put_green_marker_in_bowl_success_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
       </video>
       <p>
-        <font color="#FF4500"><b>Success</b></font>: Put green marker in bowl
+        <font color="#76B900"><b>Success</b></font>: Put green marker in bowl
       </p>
     </div>
   </div>
@@ -329,7 +329,7 @@
         <source src="real_world/put_blue_marker_in_bowl_success_2.mp4" type="video/mp4" class="figure-img img-fluid rounded">
       </video>
       <p>
-        <font color="#FF4500"><b>Success</b></font>: Put blue marker in bowl
+        <font color="#76B900"><b>Success</b></font>: Put blue marker in bowl
       </p>
     </div>
   </div>
@@ -339,7 +339,7 @@
         <source src="real_world/put_green_marker_in_mug_success_3.mp4" type="video/mp4" class="figure-img img-fluid rounded">
       </video>
       <p>
-      <font color="#FF4500"><b>Success</b></font>: Put green marker in mug
+      <font color="#76B900"><b>Success</b></font>: Put green marker in mug
       </p>
     </div>
   </div>
@@ -364,7 +364,7 @@
         <source src="real_world/press_sanitizer_success_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
       </video>
       <p>
-        <font color="#FF4500"><b>Success</b></font>: Press sanitizer
+        <font color="#76B900"><b>Success</b></font>: Press sanitizer
       </p>
     </div>
   </div>
@@ -374,7 +374,7 @@
         <source src="real_world/press_sanitizer_success_2.mp4" type="video/mp4" class="figure-img img-fluid rounded">
       </video>
       <p>
-        <font color="#FF4500"><b>Success</b></font>: Press sanitizer
+        <font color="#76B900"><b>Success</b></font>: Press sanitizer
       </p>
     </div>
   </div>
@@ -384,7 +384,7 @@
         <source src="real_world/press_sanitizer_success_3.mp4" type="video/mp4" class="figure-img img-fluid rounded">
       </video>
       <p>
-      <font color="#FF4500"><b>Success</b></font>: Press sanitizer
+      <font color="#76B900"><b>Success</b></font>: Press sanitizer
       </p>
     </div>
   </div>
@@ -408,7 +408,7 @@
         <source src="real_world/put_blue_on_red_success_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
       </video>
       <p>
-        <font color="#FF4500"><b>Success</b></font>: Put blue block on red block
+        <font color="#76B900"><b>Success</b></font>: Put blue block on red block
       </p>
     </div>
   </div>
@@ -418,7 +418,7 @@
         <source src="real_world/put_green_on_blue_success_2.mp4" type="video/mp4" class="figure-img img-fluid rounded">
       </video>
       <p>
-        <font color="#FF4500"><b>Success</b></font>: Put green block on blue block
+        <font color="#76B900"><b>Success</b></font>: Put green block on blue block
       </p>
     </div>
   </div>
@@ -428,7 +428,7 @@
         <source src="real_world/put_red_on_green_success_3.mp4" type="video/mp4" class="figure-img img-fluid rounded">
       </video>
       <p>
-      <font color="#FF4500"><b>Success</b></font>: Put red block on green block
+      <font color="#76B900"><b>Success</b></font>: Put red block on green block
       </p>
     </div>
   </div>
@@ -452,7 +452,7 @@
         <source src="real_world/peg_success_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
       </video>
       <p>
-        <font color="#FF4500"><b>Success</b></font>: Insert peg
+        <font color="#76B900"><b>Success</b></font>: Insert peg
       </p>
     </div>
   </div>
@@ -462,7 +462,7 @@
         <source src="real_world/peg_success_2.mp4" type="video/mp4" class="figure-img img-fluid rounded">
       </video>
       <p>
-        <font color="#FF4500"><b>Success</b></font>: Insert peg
+        <font color="#76B900"><b>Success</b></font>: Insert peg
       </p>
     </div>
   </div>
@@ -472,7 +472,7 @@
         <source src="real_world/peg_success_3.mp4" type="video/mp4" class="figure-img img-fluid rounded">
       </video>
       <p>
-      <font color="#FF4500"><b>Success</b></font>: Insert peg
+      <font color="#76B900"><b>Success</b></font>: Insert peg
       </p>
     </div>
   </div>
@@ -497,7 +497,7 @@
         <source src="real_world/plug_success_1.mp4" type="video/mp4" class="figure-img img-fluid rounded">
       </video>
       <p>
-        <font color="#FF4500"><b>Success</b></font>: Insert plug
+        <font color="#76B900"><b>Success</b></font>: Insert plug
       </p>
     </div>
   </div>
@@ -507,7 +507,7 @@
         <source src="real_world/plug_success_2.mp4" type="video/mp4" class="figure-img img-fluid rounded">
       </video>
       <p>
-        <font color="#FF4500"><b>Success</b></font>: Insert plug
+        <font color="#76B900"><b>Success</b></font>: Insert plug
       </p>
     </div>
   </div>
@@ -517,7 +517,7 @@
         <source src="real_world/plug_success_3.mp4" type="video/mp4" class="figure-img img-fluid rounded">
       </video>
       <p>
-      <font color="#FF4500"><b>Success</b></font>: Insert plug
+      <font color="#76B900"><b>Success</b></font>: Insert plug
       </p>
     </div>
   </div>
